overflow of cookie page fix

--- a/CSS/typography.css
+++ b/CSS/typography.css
@@ -25,7 +25,7 @@
   flex-wrap: wrap;
   flex-direction: row;
   padding: 10rem 2rem 0rem;
-  width: 100%;
+  width: 100vh;
   justify-content: center;
   align-items: center;
   gap: 0;
@@ -175,6 +175,7 @@
   .policy-text {
   flex: 1 1 auto; 
   max-width: none;        /* optional minimum to avoid collapse */
+  overflow-x: hidden;
   height: 30rem;
 }
 }
